# lotr-api

./: README.md  crud.py  database.py  enumerations.py  main.py  packages.txt  pyproject.toml  schemas.py
db/: lotr.db
db/source/: chapters.csv  characters.csv  movies.csv  quotes.csv  source.txt
