[tool.poetry]
name = "lotr-api"
version = "0.1.0"
description = "The Lord Of The Rings API"
authors = ["Luciano Muñoz <hola@luciano.im>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.96.0"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
